--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
  </button></a>
 
  <div class="text1"><h3>Hello!</h3></div>
- <div class="text2"><h3>My name is Tarun Gahlot.</h3></div>
- <div class="text3"><h3>I am from Haryana, India.</h3></div>
-
+ <div class="text2"><h3>· My name is Tarun Gahlot.</h3></div>
+ <div class="text3"><h3>· I am from Haryana, India.</h3></div>
+ <div class="text4"><h3>· I am an Cybersecurity enthusiast<br>and a part time developer.</h3></div>
+ <div class="text5"><h3>· I like to work on projects related to<br>Cybersecurity, Software Integration and<br>Games.</h3></div>
  <img src="./img/Photo.jpeg"; class="photo1">
  </body>
 </html>
